--- a/pkg/admin/gui/front-end/html/addProtoConfig.html
+++ b/pkg/admin/gui/front-end/html/addProtoConfig.html
@@ -58,6 +58,31 @@
 </div>
 {{ end }}
 
+{{ define "addR66Client" }}
+<div id="protoConfig_r66" class="protoConfigBlock" style="display:none;">
+    <hr style="border-top: 1px solid #ababab;">
+    <div class="mt-4 mb-2"><strong>{{ index .tab "protocolConfiguration" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipProtocolConfiguration" }}"></i> :</strong></div>
+    <div class="form-input mt-4">
+        <label class="col-form-label">{{ index .tab "blockSize" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipBlockSize" }}"></i> :</label>
+        <input type="text" name="protoConfigR66blockSize" class="form-control">
+    </div>
+    <hr style="border-top: 1px solid #ababab;">
+    <div class="form-input mt-2 d-flex align-items-center">
+        <label class="col-form-label me-3">{{ index .tab "noFinalHash" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipNoFinalHash" }}"></i> :</label>
+        <div class="form-check form-check-inline">
+            <input class="form-check-input" type="checkbox" name="noFinalHash" id="noFinalHash" value="true">
+        </div>
+    </div>
+    <hr style="border-top: 1px solid #ababab;">
+    <div class="form-input mt-2 d-flex align-items-center">
+        <label class="col-form-label me-3">{{ index .tab "checkBlockHash" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipCheckBlockHash" }}"></i> :</label>
+        <div class="form-check form-check-inline">
+            <input class="form-check-input" type="checkbox" name="checkBlockHash" id="checkBlockHash" value="true">
+        </div>
+    </div>
+</div>
+{{ end }}
+
 {{ define "addFtpPartner" }}
 <div id="protoConfig_ftp" class="protoConfigBlock" style="display:none;">
     <hr style="border-top: 1px solid #ababab;">
@@ -132,11 +157,16 @@
         <input type="text" name="passiveModeMaxPort" class="form-control">
     </div>
     <div id="ftpsForm">
-    <hr style="border-top: 1px solid #ababab;">
-    <div class="form-input mt-4">
-        <label class="col-form-label">{{ index .tab "tlsRequirement" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipTlsRequirement" }}"></i> :</label>
-        <input type="text" name="tlsRequirement" class="form-control">
-    </div>
+        <hr style="border-top: 1px solid #ababab;">
+        <div class="form-input">
+            <label class="col-form-label">{{ index .tab "tlsRequirement" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipTlsRequirement" }}"></i> :</label>
+            <select name="tlsRequirement" class="form-select">
+                <option value="" disabled selected>{{ index .tab "selectTLSRequirement" }}</option>
+                {{ range .TLSRequirement }}
+                    <option value="{{ . }}">{{ . }}</option>
+                {{ end }}
+            </select>
+        </div>
         <hr style="border-top: 1px solid #ababab;">
         <div class="form-input">
             <label class="col-form-label">{{ index .tab "minTLSVersion" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipMinFtpsTLSVersion" }}"></i> :</label>
@@ -151,6 +181,45 @@
 </div>
 {{ end }}
 
+{{ define "addFtpClient" }}
+<div id="protoConfig_ftp" class="protoConfigBlock" style="display:none;">
+    <hr style="border-top: 1px solid #ababab;">
+    <div class="mt-4 mb-2"><strong>{{ index .tab "protocolConfiguration" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipProtocolConfiguration" }}"></i> :</strong></div>
+    <div class="form-input mt-4 d-flex align-items-center">
+        <label class="col-form-label me-3">{{ index .tab "enablePassiveMode" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipEnablePassiveMode" }}"></i> :</label>
+        <div class="form-check form-check-inline">
+            <input class="form-check-input" type="checkbox" name="enablePassiveMode" id="enablePassiveMode" value="true">
+        </div>
+    </div>
+    <hr style="border-top: 1px solid #ababab;">
+    <div class="form-input mt-4">
+        <label class="col-form-label">{{ index .tab "activeModeAddress" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipActiveModeAddress" }}"></i> :</label>
+        <input type="text" name="activeModeAddress" class="form-control">
+    </div>
+    <hr style="border-top: 1px solid #ababab;">
+    <div class="form-input mt-4">
+        <label class="col-form-label">{{ index .tab "activeModeMinPort" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipActiveModeMinPort" }}"></i> :</label>
+        <input type="text" name="activeModeMinPort" class="form-control">
+    </div>
+    <hr style="border-top: 1px solid #ababab;">
+    <div class="form-input mt-4">
+        <label class="col-form-label">{{ index .tab "activeModeMaxPort" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipActiveModeMaxPort" }}"></i> :</label>
+        <input type="text" name="activeModeMaxPort" class="form-control">
+    </div>
+    <div id="ftpsForm">
+    <hr style="border-top: 1px solid #ababab;">
+        <div class="form-input">
+            <label class="col-form-label">{{ index .tab "minTLSVersion" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipMinFtpsTLSVersion" }}"></i> :</label>
+            <select name="protoConfigFTPSminTLSVersion" id="protoConfigFTPSminTLSVersion" class="form-select">
+                <option value="" disabled selected>{{ index .tab "selectTLSVersion" }}</option>
+                {{ range .TLSVersions }}
+                    <option value="{{ . }}">{{ . }}</option>
+                {{ end }}
+            </select>
+        </div>
+    </div>
+</div>
+{{ end }}
 
 {{ define "addPesitPartner" }}
 <div id="protoConfig_pesit" class="protoConfigBlock" style="display:none;">
@@ -217,7 +286,7 @@
         <hr style="border-top: 1px solid #ababab;">
         <div class="form-input mt-2">
             <label class="col-form-label">{{ index .tab "minTLSVersion" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipMinPesitTLSVersion" }}"></i> :</label>
-            <select name="protoConfigPeSIT-TLSminTLSVersion" id="protoConfigPeSIT-TLSminTLSVersion" class="form-select">
+            <select name="protoConfigFTPSminTLSVersion" id="protoConfigFTPSminTLSVersion" class="form-select">
                 <option value="" disabled selected>{{ index .tab "selectTLSVersion" }}</option>
                 {{ range .TLSVersions }}
                     <option value="{{ . }}">{{ . }}</option>
@@ -271,13 +340,43 @@
         <hr style="border-top: 1px solid #ababab;">
         <div class="form-input mt-2">
             <label class="col-form-label">{{ index .tab "minTLSVersion" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipMinPesitTLSVersion" }}"></i> :</label>
-            <select name="protoConfigPeSIT-TLSminTLSVersion" id="protoConfigPeSIT-TLSminTLSVersion" class="form-select">
+            <select name="protoConfigFTPSminTLSVersion" id="protoConfigFTPSminTLSVersion" class="form-select">
                 <option value="" disabled selected>{{ index .tab "selectTLSVersion" }}</option>
                 {{ range .TLSVersions }}
                     <option value="{{ . }}">{{ . }}</option>
                 {{ end }}
             </select>
         </div>
+    </div>
+</div>
+{{ end }}
+
+{{ define "addPesitClient" }}
+<div id="protoConfig_pesit" class="protoConfigBlock" style="display:none;">
+    <hr style="border-top: 1px solid #ababab;">
+    <div class="mt-4 mb-2"><strong>{{ index .tab "protocolConfiguration" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipProtocolConfiguration" }}"></i> :</strong></div>
+    <div class="form-input mt-4 d-flex align-items-center">
+        <label class="col-form-label me-3">{{ index .tab "disableRestart" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipDisableRestart" }}"></i> :</label>
+        <div class="form-check form-check-inline">
+            <input class="form-check-input" type="checkbox" name="disableRestart" id="disableRestart" value="true">
+        </div>
+    </div>
+    <hr style="border-top: 1px solid #ababab;">
+    <div class="form-input mt-2 d-flex align-items-center">
+        <label class="col-form-label me-3">{{ index .tab "disableCheckpoints" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipDisableCheckpoints" }}"></i> :</label>
+        <div class="form-check form-check-inline">
+            <input class="form-check-input" type="checkbox" name="disableCheckpoints" id="disableCheckpoints" value="true">
+        </div>
+    </div>
+    <hr style="border-top: 1px solid #ababab;">
+    <div class="form-input mt-2">
+        <label class="col-form-label">{{ index .tab "checkpointSize" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipCheckpointSize" }}"></i> :</label>
+        <input type="text" name="protoConfigPeSITcheckpointSize" class="form-control">
+    </div>
+    <hr style="border-top: 1px solid #ababab;">
+    <div class="form-input mt-2">
+        <label class="col-form-label">{{ index .tab "checkpointWindow" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipCheckpointWindow" }}"></i> :</label>
+        <input type="text" name="protoConfigPeSITcheckpointWindow" class="form-control">
     </div>
 </div>
 {{ end }}
@@ -301,7 +400,7 @@
                 </button>
             </div>
         </div>
-        <button type="button" class="btn btn-outline-primary btn-sm" onclick="addField(this,'keyExchanges[]')">Add</button>
+        <button type="button" class="btn btn-outline-primary btn-sm" onclick="addField(this,'keyExchanges[]')">{{ index .tab "add" }}</button>
     </div>
     <hr style="border-top: 1px solid #ababab;">
     <div class="form-input mt-2">
@@ -319,7 +418,7 @@
                 </button>
             </div>
         </div>
-        <button type="button" class="btn btn-outline-primary btn-sm" onclick="addField(this,'ciphers[]')">Add</button>
+        <button type="button" class="btn btn-outline-primary btn-sm" onclick="addField(this,'ciphers[]')">{{ index .tab "add" }}</button>
     </div>
     <hr style="border-top: 1px solid #ababab;">
     <div class="form-input mt-2">
@@ -337,7 +436,7 @@
                 </button>
             </div>
         </div>
-        <button type="button" class="btn btn-outline-primary btn-sm" onclick="addField(this,'macs[]')">Add</button>
+        <button type="button" class="btn btn-outline-primary btn-sm" onclick="addField(this,'macs[]')">{{ index .tab "add" }}</button>
     </div>
     <hr style="border-top: 1px solid #ababab;">
     <div class="form-input mt-2 d-flex align-items-center">
@@ -375,7 +474,7 @@
                 </button>
             </div>
         </div>
-        <button type="button" class="btn btn-outline-primary btn-sm" onclick="addField(this,'keyExchanges[]')">Add</button>
+        <button type="button" class="btn btn-outline-primary btn-sm" onclick="addField(this,'keyExchanges[]')">{{ index .tab "add" }}</button>
     </div>
     <hr style="border-top: 1px solid #ababab;">
     <div class="form-input mt-2">
@@ -393,7 +492,7 @@
                 </button>
             </div>
         </div>
-        <button type="button" class="btn btn-outline-primary btn-sm" onclick="addField(this,'ciphers[]')">Add</button>
+        <button type="button" class="btn btn-outline-primary btn-sm" onclick="addField(this,'ciphers[]')">{{ index .tab "add" }}</button>
     </div>
     <hr style="border-top: 1px solid #ababab;">
     <div class="form-input mt-2">
@@ -411,7 +510,67 @@
                 </button>
             </div>
         </div>
-        <button type="button" class="btn btn-outline-primary btn-sm" onclick="addField(this,'macs[]')">Add</button>
+        <button type="button" class="btn btn-outline-primary btn-sm" onclick="addField(this,'macs[]')">{{ index .tab "add" }}</button>
+    </div>
+</div>
+{{ end }}
+
+{{ define "addSftpClient" }}
+<div id="protoConfig_sftp" class="protoConfigBlock" style="display:none;">
+    <hr style="border-top: 1px solid #ababab;">
+    <div class="mt-4 mb-2"><strong>{{ index .tab "protocolConfiguration" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipProtocolConfiguration" }}"></i> :</strong></div>
+    <div class="form-input mt-4">
+        <label class="col-form-label">{{ index .tab "keyExchanges" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipKeyExchanges" }}"></i> :</label>
+        <div id="keyExchangesContainer">
+            <div class="input-group mb-2">
+                <select name="keyExchanges[]" class="form-select">
+                    <option value="" disabled selected>{{ index .tab "selectKeyExchanges" }}</option>
+                    {{ range .KeyExchanges }}
+                        <option value="{{ .Name }}">{{ .Name }}{{ if (contains .Name "sha1") }} ({{ index $.tab "depreciated" }}){{ end }}</option>
+                    {{ end }}
+                </select>
+                <button type="button" class="btn btn-outline-danger btn-sm" onclick="removeField(this)" tabindex="-1">
+                    <i class="bi bi-trash"></i>
+                </button>
+            </div>
+        </div>
+        <button type="button" class="btn btn-outline-primary btn-sm" onclick="addField(this,'keyExchanges[]')">{{ index .tab "add" }}</button>
+    </div>
+    <hr style="border-top: 1px solid #ababab;">
+    <div class="form-input mt-2">
+        <label class="col-form-label">{{ index .tab "ciphers" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipCiphers" }}"></i> :</label>
+        <div id="ciphersContainer">
+            <div class="input-group mb-2">
+                <select name="ciphers[]" class="form-select">
+                    <option value="" disabled selected>{{ index .tab "selectCiphers" }}</option>
+                    {{ range .Ciphers }}
+                        <option value="{{ .Name }}">{{ .Name }}{{ if (contains .Name "sha1") }} ({{ index $.tab "depreciated" }}){{ end }}</option>
+                    {{ end }}
+                </select>
+                <button type="button" class="btn btn-outline-danger btn-sm" onclick="removeField(this)" tabindex="-1">
+                    <i class="bi bi-trash"></i>
+                </button>
+            </div>
+        </div>
+        <button type="button" class="btn btn-outline-primary btn-sm" onclick="addField(this,'ciphers[]')">{{ index .tab "add" }}</button>
+    </div>
+    <hr style="border-top: 1px solid #ababab;">
+    <div class="form-input mt-2">
+        <label class="col-form-label">{{ index .tab "macs" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipMacs" }}"></i> :</label>
+        <div id="macsContainer">
+            <div class="input-group mb-2">
+                <select name="macs[]" class="form-select">
+                    <option value="" disabled selected>{{ index .tab "selectMacs" }}</option>
+                    {{ range .MACs }}
+                        <option value="{{ .Name }}">{{ .Name }}{{ if (contains .Name "sha1") }} ({{ index $.tab "depreciated" }}){{ end }}</option>
+                    {{ end }}
+                </select>
+                <button type="button" class="btn btn-outline-danger btn-sm" onclick="removeField(this)" tabindex="-1">
+                    <i class="bi bi-trash"></i>
+                </button>
+            </div>
+        </div>
+        <button type="button" class="btn btn-outline-primary btn-sm" onclick="addField(this,'macs[]')">{{ index .tab "add" }}</button>
     </div>
 </div>
 {{ end }}
