--- a/pkg/admin/gui/front-end/html/local_client_management_page.html
+++ b/pkg/admin/gui/front-end/html/local_client_management_page.html
@@ -71,10 +71,10 @@
                 <label class="col-form-label">{{ index .tab "address" }} ({{ index .tab "port" }}) <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipPort" }}"></i> :</label>
                 <input type="text" name="addLocalClientPort" class="form-control" required>
                 </div>
-                {{ template "addR66Partner" . }}
-                {{ template "addSftpPartner" . }}
-                {{ template "addFtpPartner" . }}
-                {{ template "addPesitPartner" . }}
+                {{ template "addR66Client" . }}
+                {{ template "addSftpClient" . }}
+                {{ template "addFtpClient" . }}
+                {{ template "addPesitClient" . }}
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">{{ index .tab "close" }}</button>
@@ -201,16 +201,16 @@
                         </div>
                         <div class="modal-body">
                         {{ if or (eq .Protocol "r66") (eq .Protocol "r66-tls") }}
-                            {{ template "displayR66" (dict "tab" $.tab "ProtoConfig" .ProtoConfig) }}
+                            {{ template "displayR66Client" (dict "tab" $.tab "ProtoConfig" .ProtoConfig) }}
                         {{ end }}
                         {{ if or (eq .Protocol "ftp") (eq .Protocol "ftps") }}
-                            {{ template "displayFtp" (dict "tab" $.tab "ProtoConfig" .ProtoConfig "TLSVersions" $.TLSVersions) }}
+                            {{ template "displayFtpClient" (dict "tab" $.tab "ProtoConfig" .ProtoConfig "TLSVersions" $.TLSVersions "Protocol" .Protocol) }}
                         {{ end }}
                         {{ if or (eq .Protocol "pesit") (eq .Protocol "pesit-tls") }}
-                            {{ template "displayPesit" (dict "tab" $.tab "ProtoConfig" .ProtoConfig "TLSVersions" $.TLSVersions) }}
+                            {{ template "displayPesitClient" (dict "tab" $.tab "ProtoConfig" .ProtoConfig "TLSVersions" $.TLSVersions) }}
                         {{ end }}
                         {{ if eq .Protocol "sftp" }}
-                            {{ template "displaySftp" (dict "tab" $.tab "ProtoConfig" .ProtoConfig "KeyExchanges" $.KeyExchanges "Ciphers" $.Ciphers "MACs" $.MACs) }}
+                            {{ template "displaySftpClient" (dict "tab" $.tab "ProtoConfig" .ProtoConfig "KeyExchanges" $.KeyExchanges "Ciphers" $.Ciphers "MACs" $.MACs) }}
                         {{ end }}
                         </div>
                         <div class="modal-footer">
@@ -264,10 +264,10 @@
                             <label class="col-form-label">{{ index $.tab "address" }} ({{ index $.tab "port" }}) <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipPort" }}"></i> :</label>
                             <input type="text" name="editLocalClientPort" class="form-control" required value="{{ .LocalAddress.Port }}">
                             </div>
-                            {{ template "editR66" (dict "tab" $.tab "ProtoConfig" .ProtoConfig) }}
-                            {{ template "editFtp" (dict "tab" $.tab "ProtoConfig" .ProtoConfig "TLSVersions" $.TLSVersions) }}
-                            {{ template "editPesit" (dict "tab" $.tab "ProtoConfig" .ProtoConfig "TLSVersions" $.TLSVersions "CompatibilityModePeSIT" $.CompatibilityModePeSIT) }}
-                            {{ template "editSftp" (dict "tab" $.tab "ProtoConfig" .ProtoConfig "KeyExchanges" $.KeyExchanges "Ciphers" $.Ciphers "MACs" $.MACs) }}
+                            {{ template "editR66Client" (dict "tab" $.tab "ProtoConfig" .ProtoConfig) }}
+                            {{ template "editFtpClient" (dict "tab" $.tab "ProtoConfig" .ProtoConfig "TLSVersions" $.TLSVersions) }}
+                            {{ template "editPesitClient" (dict "tab" $.tab "ProtoConfig" .ProtoConfig "TLSVersions" $.TLSVersions "CompatibilityModePeSIT" $.CompatibilityModePeSIT) }}
+                            {{ template "editSftpClient" (dict "tab" $.tab "ProtoConfig" .ProtoConfig "KeyExchanges" $.KeyExchanges "Ciphers" $.Ciphers "MACs" $.MACs) }}
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">{{ index $.tab "close" }}</button>
