feat/add 10 tasks and listing & add pre-tasks

--- a/pkg/admin/gui/front-end/html/multi_language.html
+++ b/pkg/admin/gui/front-end/html/multi_language.html
@@ -18,6 +18,9 @@
     {{ if .hasServerID }}
       <input type="hidden" name="serverID" value="{{ .server.ID }}">
     {{ end }}
+    {{ if .hasRuleID }}
+      <input type="hidden" name="ruleID" value="{{ .rule.ID }}">
+    {{ end }}
   </form>
 </div>
 {{ end }}
