--- a/pkg/admin/gui/front-end/html/transfer_rules_management_page.html
+++ b/pkg/admin/gui/front-end/html/transfer_rules_management_page.html
@@ -37,6 +37,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
+                <h4>1:{{ .ID }}</h4>
                 <div class="form-input">
                     <label class="col-form-label">{{ index .tab "rules" }} :</label>
                     <input type="text" name="addRuleName" class="form-control" required>
@@ -228,7 +229,7 @@
                     <div class="modal-dialog modal-lg">
                     <div class="modal-content">
                         <form method="post" class="p-3 border rounded bg-light">
-                        <input type="hidden" name="editRuleID" value="{{ .ID }}">
+                        <input type="hidden" name="ruleID" value="{{ .ID }}">
                         <div class="modal-header">
                             <h5 class="modal-title" id="editRuleModalLabel_{{ .ID }}">{{ index $.tab "edit" }}: {{ .Name }}</h5>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
